infrastructure/controllers/base/renovate/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: renovate-policy
  namespace: renovate
spec:
  podSelector: {} # Applies to all pods in the renovate namespace
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system # Allow ingress from kube-system (for API server communication)
    ports:
    - protocol: TCP
      port: 443 # Allow HTTPS for API server communication
    - protocol: TCP
      port: 8080 # Prometheus metrics port (if you expose it)
  # - from: # Allow ingress from the namespace where your git provider is
  #   - namespaceSelector:
  #       matchLabels:
  #         name: git-provider-namespace # Replace with the actual namespace
  #   ports:
  #   - protocol: TCP
  #     port: 443 # Allow HTTPS for Git API communication
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system # Allow egress to kube-system (for API server communication)
    ports:
    - protocol: TCP
      port: 443 # Allow HTTPS for API server communication
  # - to: # Allow egress to your git provider
  #   - namespaceSelector:
  #       matchLabels:
  #         name: git-provider-namespace # Replace with the actual namespace
  #   ports:
  #   - protocol: TCP
  #     port: 443 # Allow HTTPS for Git API communication

  - to: # Allow egress to the applications namespaces you want to update
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: linkding # Use labels to target app namespaces
    ports:
    - protocol: TCP # Or UDP if your apps use that
      port: 9090 # Specify the port your apps expose

  - to: # Allow egress to the applications namespaces you want to update
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: audiobookshelf # Use labels to target app namespaces
    ports:
    - protocol: TCP # Or UDP if your apps use that
      port: 3005 # Specify the port your apps expose

  - to: # Allow egress to the applications namespaces you want to update
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vaultwarden # Use labels to target app namespaces
    ports:
    - protocol: TCP # Or UDP if your apps use that
      port: 3003 # Specify the port your apps expose

  policyTypes:
  - Ingress
  - Egress
